[tool.poetry]
name = "usaddress"
version = "0.5.10"
description = "Parse US addresses using conditional random fields"
authors = ["Original Authors <unknown@datamade.com>", "Philip Kahn <pkahn@costar.com>"]
license = "MIT"
classifiers=[
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'Natural Language :: English',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Information Analysis']
homepage = "https://github.com/datamade/usaddress"
repository = "https://github.com/tigerhawkvok/usaddress"

[tool.poetry.dependencies]
python = "^3.7"
python-crfsuite = "^0.7"
probableparsing = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
