[tool.poetry]
name = "usaddress"
version = "0.5.12"
description = "Parse US addresses using conditional random fields"
authors = ["Original Authors <unknown@datamade.com>", "Philip Kahn <pkahn@costar.com>"]
license = "MIT"
classifiers=[
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'Natural Language :: English',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Information Analysis']
homepage = "https://github.com/datamade/usaddress"
repository = "https://github.com/tigerhawkvok/usaddress"

[tool.poetry.dependencies]
python = "^3.7.2"
python-crfsuite = "^0.9.0" # ^0.7 or https://github.com/TeamHG-Memex/sklearn-crfsuite
probableparsing = "^0.0.1"
sklearn-crfsuite = "^0.3.6"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
